WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237381
ITM: Checkbox state change is not updated in isolated tree
https://bugs.webkit.org/show_bug.cgi?id=237381
Summary
ITM: Checkbox state change is not updated in isolated tree
Andres Gonzalez
Reported
2022-03-02 11:13:57 PST
ITM: Checkbox state change is not updated in isolated tree
Attachments
Patch
(9.64 KB, patch)
2022-03-02 12:02 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(9.64 KB, patch)
2022-03-02 15:36 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-02 11:14:09 PST
<
rdar://problem/89700622
>
Andres Gonzalez
Comment 2
2022-03-02 11:19:34 PST
rdar://89529486
Andres Gonzalez
Comment 3
2022-03-02 12:02:19 PST
Created
attachment 453645
[details]
Patch
chris fleizach
Comment 4
2022-03-02 12:43:27 PST
Comment on
attachment 453645
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=453645&action=review
> Source/WebCore/ChangeLog:15 > + Properly initializes the properties SupportsCheckedState, IsChceked and
IsChceked -> IsChecked
chris fleizach
Comment 5
2022-03-02 12:43:42 PST
approved but there's a spelling error
Andres Gonzalez
Comment 6
2022-03-02 15:36:09 PST
Created
attachment 453667
[details]
Patch
EWS
Comment 7
2022-03-02 17:05:11 PST
Committed
r290762
(
248006@main
): <
https://commits.webkit.org/248006@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453667
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug