ITM: Checkbox state change is not updated in isolated tree https://bugs.webkit.org/show_bug.cgi?id=237381 rdar://89529486

Reviewed by Chris Fleizach.

Fixes the following test in isolated tree mode:
accessibility/mac/checked-status-tree-items.html
accessibility/aria-switch-checked.html

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeAttributeData):
Properly initializes the properties SupportsCheckedState, IsChecked and
ButtonState.
(WebCore::AXIsolatedObject::getOrRetrievePropertyValue):
Uses the new template method propertyValue(PropertyName).
* accessibility/isolatedtree/AXIsolatedObject.h:
(WebCore::AXIsolatedObject::propertyValue const):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):
Updates both IsChecked and ButtonState.
* accessibility/isolatedtree/AXIsolatedTree.h:



Canonical link: https://commits.webkit.org/248006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290762 268f45cc-cd09-0410-ab3c-d52691b4dbfc